Bug 432857 - KRunner does not disappear when activation shortcut pressed again
Summary: KRunner does not disappear when activation shortcut pressed again
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
: 433228 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-12 14:52 UTC by Nate Graham
Modified: 2021-02-19 10:46 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-02-12 14:52:14 UTC
Instead, the following is printed to the console:

QCommandLineParser: argument list cannot be empty, it should contain at least the executable name
Comment 1 David Edmundson 2021-02-12 17:42:58 UTC
Do you know if you're running with David Re's new patches?
Comment 2 Nate Graham 2021-02-12 17:44:04 UTC
If they're merged already, then yes.
Comment 3 David Edmundson 2021-02-12 17:51:39 UTC
I'm pretty sure it's because of those rather than systemd

What used to be

Exec=dbus-send .... toggle

is now 

Exec=krunner 
(or DBus activation calling Activate)
Comment 4 David Redondo 2021-02-15 08:07:36 UTC
Indeed it was changed to toggle in 
https://invent.kde.org/plasma/plasma-workspace/-/commit/7e2c1e687e197fbc0d98b77fa735612d3c317687

will look into it
Comment 5 Bug Janitor Service 2021-02-15 15:17:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/650
Comment 6 Nate Graham 2021-02-16 14:42:13 UTC
Git commit 51ca0cc28fd6d8d08844a3b27b86526ee0dcc71f by Nate Graham, on behalf of David Redondo.
Committed on 16/02/2021 at 14:41.
Pushed by ngraham into branch 'master'.

Toogle KRunner again

M  +1    -1    krunner/main.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/51ca0cc28fd6d8d08844a3b27b86526ee0dcc71f
Comment 7 David Edmundson 2021-02-19 10:46:59 UTC
*** Bug 433228 has been marked as a duplicate of this bug. ***