Toogle KRunner again

BUG:432857